--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,11 @@
 
 
 
-.gnb-top{}
-.gnb-top ul{display: flex; justify-content: end;}
-.gnb-top ul li{margin-top: 20px; margin-right: 20px;}
-.gnb-top ul li a{}
 .gnb-wrap{display: flex; justify-content: center; align-items: center; position: relative; height: 105px;}
 .left-box{display: flex; justify-content: flex-start; align-items: center;}
 .left-box h1{}
 .left-box .nav{}
-.left-box>.nav>.bg{position: absolute; width: 100%;height: 0;background: paleturquoise; top: 105px; left: 0; transition: .3s; z-index: 9999999999; overflow: hidden;} 
+.left-box>.nav>.bg{position: absolute; width: 100%;height: 0;background: #fff; top: 105px; left: 0; transition: .3s; z-index: 9999999999; overflow: hidden;} 
 .left-box .nav:hover .bg{height: 250px; }
 .left-box .nav .depth1{display: flex;}
 .left-box .nav .depth1 li{padding-right: 80px;}
@@ -207,12 +203,23 @@ box-sizing: border-box;}
 
 
 .main_evt_news{}
-.main_evt_news .event_wrap{float: left;}
-.main_evt_news .event_wrap h3{}
-.main_evt_news .event_wrap img{}
+.main_evt_news .inner{display: flex; justify-content: space-between;}
+.main_evt_news .event_wrap{display: flex; flex-direction: column;}
+.main_evt_news .event_wrap h3{
+  color: #2d2d2d;
+  font-weight: bold;
+  font-size: 22px;
+  margin-bottom: 30px;
+}
 
 
-.main_evt_news .news_wrap{float: left;}
+.main_evt_news .news_wrap{display: flex;   flex-direction: column;}
+.main_evt_news .news_wrap h3{
+  color: #2d2d2d;
+  font-weight: bold;
+  font-size: 22px;
+  margin-bottom: 30px;
+}
 .main_evt_news .news_wrap ul{}
 .main_evt_news .news_wrap ul li{}
 .main_evt_news .news_wrap ul li a{}
@@ -269,6 +276,9 @@ box-sizing: border-box;}
 @media screen and (max-width:853px) {
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:768px) {  /*테블릿*/
+    
+}
+@media screen and (max-width:576px) {  /*모바일*/
     
 }
