--- a/css/style222.css
+++ b/css/style222.css
@@ -35,8 +35,8 @@ display: inline-block;
 .header-mob-menu .header-appBar{
 display: block;
 position: absolute;
-width: 25px;
-height: 17px;
+width: 26px;
+height: 16px;
 background:  palevioletred;
 top: 45px;
 left: 20px;
@@ -47,7 +47,7 @@ height: 100%;
 position: relative;
 display: block;
 }
-.header-mob-menu .header-appBar .appbarBt .appbar-line{
+.header-mob-menu .header-appBar .appbarBt .bar{
 display: inline-block;
 position: absolute;
 width: 100%;
@@ -55,10 +55,14 @@ height: 2px;
 background: #000;
 top:0;
 left: 0;    
+transition: .3s;
 }
-.header-mob-menu .header-appBar .appbarBt .appbar-line1{top: 0;}
-.header-mob-menu .header-appBar .appbarBt .appbar-line2{top: 50%;}
-.header-mob-menu .header-appBar .appbarBt .appbar-line3{top: 100%;}
+.header-mob-menu .header-appBar .appbarBt .bar1{top: 0;}
+.header-mob-menu .header-appBar .appbarBt .bar2{top: 50%;}
+.header-mob-menu .header-appBar .appbarBt .bar3{top: 100%;}
+.header-mob-menu .header-appBar .appbarBt .bar1.active{top: 50%; margin-top: -1px; transform: rotate(45deg);}
+.header-mob-menu .header-appBar .appbarBt .bar2.active{opacity: 0;}
+.header-mob-menu .header-appBar .appbarBt .bar3.active{top: 50%; margin-top: -1px; transform: rotate(-45deg);}
 
 .header-mob-menu .header-shop-btn{
 display: block;
@@ -78,6 +82,8 @@ background-image: url(/images/ico_gnb_mobile_new_store.jpg);
 background-repeat: no-repeat;
 }
 
+
+
 aside{
 text-align: right;
 padding-top: 15px;
@@ -86,42 +92,219 @@ padding-bottom: 7px;
 aside span{display: inline-block;}
 aside span a{color: mediumseagreen;}
 
-.header-logoNav{
+.header-nav{
 width: 100%;
 display: flex;
 justify-content:space-between;
 align-items: center;
 }
-.header-logoNav h1{}
-.header-logoNav h1 a{}
-.header-logoNav h1 a img{}
+
+
+.header-nav h1{}
+.header-nav h1 a{}
+.header-nav h1 a img{}
+
 
 nav{}
-nav .bg{}
-nav .depth1{display: flex;}
-nav .depth1 li{margin-left: 20px;}
-nav .depth1 li a{
+nav ul{display: flex;}
+nav ul li{margin-left: 20px;}
+nav ul li a{
 display: block;
 font-size: 16px;
 transition: .3s;
 border-bottom: 1px solid rgba(255,255,255,0);
 }
-nav .depth1 li a:hover{border-bottom: 3px solid palegreen;}
-nav .depth1 li .depth2{display: none;}
-nav .depth1 li .depth2 li{}
-nav .depth1 li .depth2 li a{}
+
+
+
+/*햄버거 메뉴*/
+.mob-gnb{/* display: none; */} 
+/* .mob-bg{
+    content: '';
+    display: none; 
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background: #000;
+    position: fixed; 
+    opacity: .6;
+    z-index: 9999;}
+.mob-bg.on{display: block;} */
+
+.mob-gnb .mob-content{
+    display: block; 
+    width: 70%;   
+    height: 100%; 
+    background:papayawhip;
+    padding: 30px; 
+    box-sizing: border-box;  
+    position: fixed;  
+    top: 0; 
+    left: 0;  
+    z-index:9999999999999999;  
+    overflow: auto;}
+.mob-gnb .mob-content.active{left: 0%; display: block;}
+
+.mob-gnb .mob-content .mob-gnb-search{/* display: none; */ margin-bottom: 30px; position: relative;}
+.mob-gnb .mob-content .mob-gnb-search label{}
+.mob-gnb .mob-content .mob-gnb-search input{
+line-height: 50px;
+border: 0;
+border-bottom: 1px #9a9a9a solid;
+font-size: 20px;
+height: 50px;
+width: 100%;
+border-radius: 3px;
+padding-left: 10px;
+box-sizing: border-box;}
+
+.mob-gnb .mob-content .mob-gnb-search button{
+width: 40px; /*1050쯤 60으로 바꾸기*/
+height: 40px;
+background: #7b6251;
+color: #fff;
+border-radius: 50%;
+cursor: pointer;
+position: absolute;
+top: 5px;
+right: 5px; 
+}
+.mob-gnb .mob-content .mob-gnb-search button i{color: #fff;font-size: 14px;}
+
+
+
+
+.mob-gnb .mob-content .mob-nav{}
+.mob-gnb .mob-content .mob-nav>ul{width: 100%;}
+.mob-gnb .mob-content .mob-nav>ul>li{ }
+.mob-gnb .mob-content .mob-nav>ul>li>a{display: block; color: #402c10; font-size: 32px;height: 70px; line-height: 70px;}
+.mob-gnb .mob-content .mob-nav>ul>li>.mob-depth2{display: none;}
+.mob-gnb .mob-content .mob-nav>ul>li>.mob-depth2.on{display: block;}
+.mob-gnb .mob-content .mob-nav>ul>li>.mob-depth2>li{background: #faf9f5; height: 70px; line-height: 70px;}
+.mob-gnb .mob-content .mob-nav>ul>li>.mob-depth2>li>a{font-size: 24px; display: block; height: 70px; color: #7b6251; padding-left: 25px;}
+
+
+.mob-gnb .mob-content .mob-nav>.util{ width: 100%; display: block; margin: 30px 0;}
+.mob-gnb .mob-content .mob-nav>.util>ul{}
+.mob-gnb .mob-content .mob-nav>.util>ul>li{display: inline-block; padding: 0 10px;}
+/* .mob-nav>.util>ul>li::before{content: '';height: 20px;} */
+.mob-gnb .mob-content .mob-nav>.util>ul>li>a{font-size: 20px; color: #7b6251;}
+
+
+
+
+
+
+
+
+
 
 
 #main{width: 100%;}
 #section1{width: 100%;}
 #section1 .inner{position: relative; width: 100%;}
 .main_banner{width: 100%;}
-.main_banner .swiper-button-next{right: 50px;}
-.main_banner .swiper-button-prev{left: 50px;}
+.main_banner .swiper-pagination{top: auto; bottom: 0;} 
 
-.swiper {width: 100%;height: 100%;position: relative;overflow: hidden;}
-.swiper-slide {text-align: center;font-size: 18px;display: flex;justify-content: center;align-items: center;}
-.swiper-slide img {display: block;width: 100%;height: 100%;object-fit: cover;}
+.swiper {width: 100%;height: 100%;position: relative;}
+.swiper-slide {
+text-align: center;
+font-size: 18px;
+background: #fff;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.swiper-slide img {
+display: block;
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+.p_img{}
+.m_img{display: none !important;}
+
+
+
+
+#section2{width: 100%; height: 320px; background: papayawhip; margin-top: 70px;}
+#section2 .inner{
+width: 100%;
+max-width: 1100px;
+margin: 0 auto; 
+/* background: rgba(0, 0, 0, .2); */
+padding: 0 30px;
+box-sizing: border-box;
+}
+
+.main_menu_prd{width: 100%;}
+.main_menu_prd .main_menu_new{width: 30%; height: 320px; float: left; background: palevioletred; padding: 0 20px; box-sizing: border-box;}
+.main_menu_prd .main_menu_new h2{font-size: 38px; color: palegreen; font-weight: bold; margin-bottom: 20px;}
+.main_menu_prd .main_menu_new div{width: 100%;display: inline-block; text-align: center;}
+.main_menu_prd .main_menu_new div img{width: 200px; height: 200px;}
+.main_menu_prd .main_menu_new div strong{font-size: 18px; display: block; color: snow;}
+
+.main_menu_prd .main_menu_hot{float: left; background: pink; width: 70%;height: 320px; padding: 0 20px; box-sizing: border-box;}
+.main_menu_prd .main_menu_hot h2{font-size: 38px; color: palegreen; font-weight: bold; margin-bottom: 20px;}
+
+.owl-nav{display: none;}
+.main_menu_hot .slide_memu{padding-top: 30px;}
+.main_menu_hot .slide_memu ul{}
+.main_menu_hot .slide_memu ul li{
+display: inline-block;
+width: 300px;
+height: 300px;
+margin-right: 30px;
+padding: 0 30px;
+}
+.slide_memu li .img_box{}
+.slide_memu li .img_box a{
+    border-radius: 50%;
+    background-color: oldlace;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    overflow: hidden;
+}
+.slide_memu li .img_box a img{width: 100%; object-fit: contain; height: 100%;  padding: 10px; box-sizing: border-box;}
+
+.slide_memu li .text_box{width: 100%; text-align: center; margin-top: 5px;}
+.slide_memu li .text_box strong{font-size: 18px; color: seagreen; }
+
+
+
+
+#section3{width: 100%; background: linen;}
+#section3 .inner{
+width: 100%;
+max-width: 1100px;
+margin: 0 auto; 
+padding: 0 30px;
+box-sizing: border-box;
+}
+
+.main_notice{background: teal; margin-top: 30px; display: flex;}
+.main_notice .event_wrap{}
+.main_notice .event_wrap h2{font-size: 22px; color: palegreen; font-weight: bold; margin-bottom: 20px;}
+.main_notice .event_wrap a{}
+.main_notice .event_wrap a img{}
+
+
+.main_notice .news_wrap{}
+.main_notice .news_wrap h2{font-size: 22px; color: palegreen; font-weight: bold; margin-bottom: 20px;}
+.main_notice .news_wrap ul{}
+.main_notice .news_wrap ul li{}
+.main_notice .news_wrap ul li a{}
+.main_notice .news_wrap ul li strong{}
+.main_notice .news_wrap ul li strong i{}
+.main_notice .news_wrap ul li strong span{}
+.main_notice .news_wrap ul li strong em{}
+
+
 
 
 
@@ -131,7 +314,17 @@ nav .depth1 li .depth2 li a{}
 
 
 @media screen and (max-width:1100px) {
+    #header .inner{padding: 0;}
     .header-mob-menu{ display: block;}
     aside{display: none;}
-    .header-logoNav{display: none;}
+}
+
+@media screen and (max-width:768px) {
+    #header{height: 90px;}
+    .header-mob-menu{height: 90px;}
+    .p_img{display: none !important;}
+    .m_img{display: inline !important;}
+}
+
+@media screen and (max-width:768px) {
 }
