--- a/css/style222.css
+++ b/css/style222.css
@@ -37,7 +37,6 @@ display: block;
 position: absolute;
 width: 26px;
 height: 16px;
-background:  palevioletred;
 top: 45px;
 left: 20px;
 }
@@ -105,12 +104,14 @@ align-items: center;
 .header-nav h1 a img{}
 
 
-nav{}
-nav ul{display: flex;}
-nav ul li{margin-left: 20px;}
-nav ul li a{
+.header-nav nav{}
+.header-nav nav ul{display: flex;}
+.header-nav nav ul li{margin-left: 35px;}
+.header-nav nav ul li a:hover{color: springgreen;}
+.header-nav nav ul li a{
 display: block;
-font-size: 16px;
+font-size: 20px;
+font-weight: bold;
 transition: .3s;
 border-bottom: 1px solid rgba(255,255,255,0);
 }
@@ -118,8 +119,8 @@ border-bottom: 1px solid rgba(255,255,255,0);
 
 
 /*햄버거 메뉴*/
-.mob-gnb{/* display: none; */} 
-/* .mob-bg{
+.mob-gnb{ /* display: none; */} 
+.mob-bg{
     content: '';
     display: none; 
     left: 0;
@@ -129,24 +130,25 @@ border-bottom: 1px solid rgba(255,255,255,0);
     background: #000;
     position: fixed; 
     opacity: .6;
-    z-index: 9999;}
-.mob-bg.on{display: block;} */
+    z-index: 999;}
+.mob-bg.on{display: block;} 
 
 .mob-gnb .mob-content{
-    display: block; 
-    width: 70%;   
+    display: none; 
+    width: 60%;   
     height: 100%; 
-    background:papayawhip;
+    background:rgb(242, 255, 232);
     padding: 30px; 
     box-sizing: border-box;  
     position: fixed;  
     top: 0; 
     left: 0;  
-    z-index:9999999999999999;  
+    z-index:9999;  
     overflow: auto;}
-.mob-gnb .mob-content.active{left: 0%; display: block;}
+.mob-gnb .mob-content.active{display: block;}
 
-.mob-gnb .mob-content .mob-gnb-search{/* display: none; */ margin-bottom: 30px; position: relative;}
+
+.mob-gnb .mob-content .mob-gnb-search{margin-bottom: 30px; position: relative;}
 .mob-gnb .mob-content .mob-gnb-search label{}
 .mob-gnb .mob-content .mob-gnb-search input{
 line-height: 50px;
@@ -172,30 +174,20 @@ right: 5px;
 }
 .mob-gnb .mob-content .mob-gnb-search button i{color: #fff;font-size: 14px;}
 
-
-
-
 .mob-gnb .mob-content .mob-nav{}
 .mob-gnb .mob-content .mob-nav>ul{width: 100%;}
 .mob-gnb .mob-content .mob-nav>ul>li{ }
-.mob-gnb .mob-content .mob-nav>ul>li>a{display: block; color: #402c10; font-size: 32px;height: 70px; line-height: 70px;}
+.mob-gnb .mob-content .mob-nav>ul>li>a{display: block; color: #402c10; font-size: 26px;height: 70px; line-height: 70px; font-weight: bold;}
 .mob-gnb .mob-content .mob-nav>ul>li>.mob-depth2{display: none;}
 .mob-gnb .mob-content .mob-nav>ul>li>.mob-depth2.on{display: block;}
 .mob-gnb .mob-content .mob-nav>ul>li>.mob-depth2>li{background: #faf9f5; height: 70px; line-height: 70px;}
-.mob-gnb .mob-content .mob-nav>ul>li>.mob-depth2>li>a{font-size: 24px; display: block; height: 70px; color: #7b6251; padding-left: 25px;}
-
+.mob-gnb .mob-content .mob-nav>ul>li>.mob-depth2>li>a{font-size: 20px; display: block; height: 70px; color: #7b6251; padding-left: 25px;}
 
 .mob-gnb .mob-content .mob-nav>.util{ width: 100%; display: block; margin: 30px 0;}
 .mob-gnb .mob-content .mob-nav>.util>ul{}
 .mob-gnb .mob-content .mob-nav>.util>ul>li{display: inline-block; padding: 0 10px;}
 /* .mob-nav>.util>ul>li::before{content: '';height: 20px;} */
-.mob-gnb .mob-content .mob-nav>.util>ul>li>a{font-size: 20px; color: #7b6251;}
-
-
-
-
-
-
+.mob-gnb .mob-content .mob-nav>.util>ul>li>a{font-size: 20px; color: #7b6251; font-weight: bold; }
 
 
 
@@ -230,7 +222,7 @@ object-fit: cover;
 
 
 
-#section2{width: 100%; height: 320px; background: papayawhip; margin-top: 70px;}
+#section2{width: 100%; height: 350px; margin-top: 70px;}
 #section2 .inner{
 width: 100%;
 max-width: 1100px;
@@ -241,17 +233,17 @@ box-sizing: border-box;
 }
 
 .main_menu_prd{width: 100%;}
-.main_menu_prd .main_menu_new{width: 30%; height: 320px; float: left; background: palevioletred; padding: 0 20px; box-sizing: border-box;}
+.main_menu_prd .main_menu_new{width: 30%; height: 350px; float: left; background: palevioletred; padding: 0 20px; box-sizing: border-box;}
 .main_menu_prd .main_menu_new h2{font-size: 38px; color: palegreen; font-weight: bold; margin-bottom: 20px;}
 .main_menu_prd .main_menu_new div{width: 100%;display: inline-block; text-align: center;}
 .main_menu_prd .main_menu_new div img{width: 200px; height: 200px;}
 .main_menu_prd .main_menu_new div strong{font-size: 18px; display: block; color: snow;}
 
-.main_menu_prd .main_menu_hot{float: left; background: pink; width: 70%;height: 320px; padding: 0 20px; box-sizing: border-box;}
+.main_menu_prd .main_menu_hot{float: left; background: pink; width: 70%;height: 350px; padding: 0 20px; box-sizing: border-box;}
 .main_menu_prd .main_menu_hot h2{font-size: 38px; color: palegreen; font-weight: bold; margin-bottom: 20px;}
 
 .owl-nav{display: none;}
-.main_menu_hot .slide_memu{padding-top: 30px;}
+.main_menu_hot .slide_memu{padding-top: 15px;}
 .main_menu_hot .slide_memu ul{}
 .main_menu_hot .slide_memu ul li{
 display: inline-block;
@@ -260,15 +252,15 @@ height: 300px;
 margin-right: 30px;
 padding: 0 30px;
 }
-.slide_memu li .img_box{}
+.slide_memu li .img_box{text-align: center;}
 .slide_memu li .img_box a{
-    border-radius: 50%;
-    background-color: oldlace;
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    overflow: hidden;
+border-radius: 50%;
+background-color: oldlace;
+display: inline-block;
+width: 100%;
+height: 100%;
+text-align: center;
+overflow: hidden;
 }
 .slide_memu li .img_box a img{width: 100%; object-fit: contain; height: 100%;  padding: 10px; box-sizing: border-box;}
 
@@ -287,22 +279,43 @@ padding: 0 30px;
 box-sizing: border-box;
 }
 
-.main_notice{background: teal; margin-top: 30px; display: flex;}
-.main_notice .event_wrap{}
+.main_notice{background: teal; margin-top: 30px;}
+.main_notice .event_wrap{
+width: 70%;
+height: 300px;
+background: plum;
+padding: 0 20px;
+box-sizing: border-box;
+float: left;}
 .main_notice .event_wrap h2{font-size: 22px; color: palegreen; font-weight: bold; margin-bottom: 20px;}
 .main_notice .event_wrap a{}
-.main_notice .event_wrap a img{}
+.main_notice .event_wrap a img{width: 100%;}
 
 
-.main_notice .news_wrap{}
+.main_notice .news_wrap{
+width: 30%;
+height: 300px;
+background: mediumpurple;
+padding-right:20px;
+box-sizing: border-box;
+float: left;
+}
 .main_notice .news_wrap h2{font-size: 22px; color: palegreen; font-weight: bold; margin-bottom: 20px;}
 .main_notice .news_wrap ul{}
-.main_notice .news_wrap ul li{}
-.main_notice .news_wrap ul li a{}
-.main_notice .news_wrap ul li strong{}
-.main_notice .news_wrap ul li strong i{}
-.main_notice .news_wrap ul li strong span{}
-.main_notice .news_wrap ul li strong em{}
+.main_notice>.news_wrap>ul>li{}
+.main_notice .news_wrap ul li a{
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    min-height: 84px;
+}
+.main_notice .news_wrap ul li a img{}
+.main_notice .news_wrap ul li a strong{}
+.main_notice .news_wrap ul li a strong i{font-style: normal; font-size: 14px; color: #9b9b9b;}
+.main_notice .news_wrap ul li a strong span{}
+.main_notice .news_wrap ul li a strong em{font-size: 14px; color: #9b9b9b;}
+
+
 
 
 
@@ -318,13 +331,32 @@ box-sizing: border-box;
     .header-mob-menu{ display: block;}
     aside{display: none;}
 }
+@media screen and (max-width:850px) {
+    .main_menu_prd{height: 300px;}
+    .main_menu_prd .main_menu_new{height: 300px;}
+    .main_menu_prd .main_menu_hot{height: 300px;}
+    .main_menu_prd .main_menu_new div img{width: 150px; height: 150px;}
+    .main_menu_prd .main_menu_new div strong{font-size: 15px;}
+    .slide_memu li .text_box strong{font-size: 15px;}
 
+}
 @media screen and (max-width:768px) {
     #header{height: 90px;}
     .header-mob-menu{height: 90px;}
     .p_img{display: none !important;}
     .m_img{display: inline !important;}
-}
 
-@media screen and (max-width:768px) {
+    .slide_memu li .img_box a{width: 70%;}
+    .main_menu_hot .slide_memu{padding-top: 10px;}
+    .main_menu_prd .main_menu_new div strong{font-size: 13px;}
+    .slide_memu li .text_box strong{font-size: 13px;}
+}
+@media screen and (max-width:680px) {
+    .main_menu_prd .main_menu_new{width:50%;}
+    .main_menu_prd .main_menu_hot{width: 50%;}
+    .slide_memu li .img_box a{width: 60%;}
+    .main_menu_hot .slide_memu{padding-top: 0;}
+}
+@media screen and (max-width:480px) {
+
 }
