--- a/css/style222.css
+++ b/css/style222.css
@@ -279,7 +279,7 @@ padding: 0 30px;
 box-sizing: border-box;
 }
 
-.main_notice{background: teal; margin-top: 30px;}
+.main_notice{ margin-top: 30px;}
 .main_notice .event_wrap{
 width: 70%;
 height: 300px;
@@ -300,20 +300,26 @@ padding-right:20px;
 box-sizing: border-box;
 float: left;
 }
-.main_notice .news_wrap h2{font-size: 22px; color: palegreen; font-weight: bold; margin-bottom: 20px;}
+.main_notice .news_wrap h2{font-size: 22px; color: palegreen; font-weight: bold; }
 .main_notice .news_wrap ul{}
 .main_notice>.news_wrap>ul>li{}
 .main_notice .news_wrap ul li a{
-    box-sizing: border-box;
-    position: relative;
-    display: block;
-    min-height: 84px;
+display: flex;
+justify-content: space-around;
+align-items: center;
 }
-.main_notice .news_wrap ul li a img{}
-.main_notice .news_wrap ul li a strong{}
-.main_notice .news_wrap ul li a strong i{font-style: normal; font-size: 14px; color: #9b9b9b;}
-.main_notice .news_wrap ul li a strong span{}
-.main_notice .news_wrap ul li a strong em{font-size: 14px; color: #9b9b9b;}
+.main_notice .news_wrap ul li a img{width: 50%; margin: 10px;}
+.main_notice .news_wrap ul li a strong{width: 50%;}
+.main_notice .news_wrap ul li a i{font-style: normal; font-size: 12px; color: #9b9b9b;}
+.main_notice .news_wrap ul li a span{
+    display: block;
+    position: relative;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    
+}
+.main_notice .news_wrap ul li a em{font-size: 12px; color: #9b9b9b;}
 
 
 
@@ -338,6 +344,11 @@ float: left;
     .main_menu_prd .main_menu_new div img{width: 150px; height: 150px;}
     .main_menu_prd .main_menu_new div strong{font-size: 15px;}
     .slide_memu li .text_box strong{font-size: 15px;}
+
+    .main_notice{margin-top: 0;}
+    .main_notice .event_wrap{height: 250px;}
+    .main_notice .news_wrap{height: 250px;}
+    .main_notice .news_wrap h2{padding-bottom: 10px;
 
 }
 @media screen and (max-width:768px) {
