--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,15 @@
 *{font-family: 'NanumSquareNeo', 'NanumSquareNeoExtraBold';}
 
+
+
+
+.quick-menu{position: fixed; bottom: 165px; right: 15%;z-index: 999999;}
+.quick-menu a{display: block; width: 107px; height: 100%; font-size: 20px; font-family: 'NanumSquareNeoExtraBold'; color: #333; text-align: center;}
+.quick-menu a img{width: 100%;}
+
+
 /* header */
-#header{width: 100%;height: 112px; background:#fff;}
+#header{width: 100%;height: 112px; background:#fff; position: fixed; z-index: 9999;}
 #header .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
 .header-mob-menu{display: none;position: relative;top:0;left:0;width: 100%;height: 112px;background: #fff;text-align: center;}
 .header-mob-menu h1{padding: 15px 0;display: inline-block;}
@@ -30,23 +38,23 @@ aside span a{color: darkgreen; font-weight: bold;}
 .header-nav nav ul li:hover a{border-bottom: 1px solid darkgreen;}
 .header-nav nav ul li a{display: block;font-size: 20px;font-weight: bold;}
 
-.mob-bg{content: '';display: none; left: 0;top: 0;width: 100vw;height: 100vh;background: #000;position: fixed; opacity: .6;z-index: 999;}
+.mob-bg{content: '';display: none; left: 0;top: 0;width: 100vw;height: 100vh;background: #000;position: fixed; opacity: .6;z-index: 99;}
 .mob-bg.on{display: block;} 
-.mob-gnb .mob-content{display: none; width: 60%;   height: 100%; background:rgb(242, 255, 232);padding: 30px; box-sizing: border-box;  position: fixed;  top: 0; left: 0;  z-index:9999;  overflow: auto;}
+.mob-gnb .mob-content{display: none; width: 60%; height: 100%; background:mintcream;padding: 30px; box-sizing: border-box;  position: fixed;  top: 0; left: 0;  z-index:999;  overflow: auto;}
 .mob-gnb .mob-content.active{display: block;}
 .mob-gnb .mob-content .mob-gnb-search{margin-bottom: 30px; position: relative;}
 .mob-gnb .mob-content .mob-gnb-search input{line-height: 50px;border: 0;border-bottom: 1px #9a9a9a solid;font-size: 20px;height: 50px;width: 100%;border-radius: 3px;padding-left: 10px;box-sizing: border-box;}
 .mob-gnb .mob-content .mob-gnb-search button{width: 40px;  height: 40px; background: darkgreen; color: #fff; border-radius: 50%; cursor: pointer; position: absolute; top: 5px; right: 5px;}
 .mob-gnb .mob-content .mob-gnb-search button i{color: #fff;font-size: 14px;}
 .mob-gnb .mob-content .mob-nav ul{width: 100%;}
-.mob-gnb .mob-content .mob-nav ul li a{display: block; color: #402c10; font-size: 26px;height: 70px; line-height: 70px; font-weight: bold;}
+.mob-gnb .mob-content .mob-nav ul li a{display: block; color: #402c10; font-size: 22px;height: 70px; line-height: 70px; font-weight: bold;}
 .mob-gnb .mob-content .mob-nav ul li .mob-depth2{display: none;}
 .mob-gnb .mob-content .mob-nav ul li .mob-depth2.on{display: block;}
 .mob-gnb .mob-content .mob-nav ul li .mob-depth2 li{background: #faf9f5; height: 70px; line-height: 70px;}
-.mob-gnb .mob-content .mob-nav ul li .mob-depth2 li a{font-size: 20px; display: block; height: 70px; color: #7b6251; padding-left: 25px;}
+.mob-gnb .mob-content .mob-nav ul li .mob-depth2 li a{font-size: 18px; display: block; height: 70px; color: #7b6251; padding-left: 25px;}
 .mob-gnb .mob-content .mob-nav .util{width: 100%; display: block; margin: 30px 0;}
 .mob-gnb .mob-content .mob-nav .util ul li{display: inline-block; padding: 0 10px; margin-bottom: 5px;}
-.mob-gnb .mob-content .mob-nav .util ul li a{font-size: 20px; color: #7b6251; font-weight: bold; }
+.mob-gnb .mob-content .mob-nav .util ul li a{font-size: 16px; color: #7b6251; font-weight: bold; }
 
 
 /* main */
@@ -54,7 +62,7 @@ aside span a{color: darkgreen; font-weight: bold;}
 /* #section1 */
 #section1{width: 100%;}
 #section1 .inner{position: relative; width: 100%;}
-.main_banner{width: 100%;}
+.main_banner{width: 100%; padding-top: 112px;}
 .main_banner .swiper-pagination{top: auto; bottom: 0;} 
 .swiper-pagination-progressbar { background-color: oldlace;}
 .swiper-pagination-progressbar .swiper-pagination-progressbar-fill{background: darkgreen;}
@@ -79,7 +87,7 @@ aside span a{color: darkgreen; font-weight: bold;}
 
 .main_menu_prd .main_menu_hot {width: 70%; margin-bottom: 20px; padding: 10px; box-sizing: border-box;}
 .slide_memu li .img_box{text-align: center; margin-top: 15px;}
-.slide_memu li .img_box a{border-radius: 50%;background-color: mintcream;display: inline-block;width: 100%;height: 100%;text-align: center;overflow: hidden;}
+.slide_memu li .img_box a{border-radius: 50%;background-color: mintcream; display: inline-block;width: 100%;height: 100%;text-align: center;overflow: hidden;}
 .slide_memu li .img_box a img{width: 100%; object-fit: contain; height: 100%;  padding: 10px; box-sizing: border-box;}
 .slide_memu li .text_box{width: 100%; text-align: center; margin-top: 20px;}
 .slide_memu li .text_box>strong{font-size: 17px; color: #555; }
@@ -97,7 +105,8 @@ aside span a{color: darkgreen; font-weight: bold;}
 .event_wrap a img, .news_wrap a img{width: 100%; height: auto;  }
 
 .news_wrap{width: 30%; padding: 0 5px; box-sizing: border-box;}
-.main_notice .news_wrap ul li{padding: 4px; margin-bottom: 8px;}
+.main_notice .news_wrap ul{padding-top: 15px; border-top: 1px #e5e5e5 solid; border-bottom: 1px solid #ccc;}
+.main_notice .news_wrap ul li{margin-bottom: 6px;}
 .main_notice .news_wrap ul li a{display: flex;justify-content: space-between;align-items: center;}
 .main_notice .news_wrap ul li a img{width: 50%;margin: 0 10px 10px 0;}
 .main_notice .news_wrap ul li a strong{width: 50%;}
@@ -107,11 +116,11 @@ aside span a{color: darkgreen; font-weight: bold;}
 
 
 /* #section4 */
-#section4{width: 100%; clear: both;margin-top: 50px;}
+#section4{width: 100%; margin-top: 50px;}
 #section4 .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
 
 .main_sns{width: 100%; padding: 0 10px;}
-.main_sns h3{font-size: 30px; color: darkgreen; font-family: 'NanumSquareNeoExtraBold'; margin-bottom: 20px;}
+.main_sns h3{font-size: 23px; color: darkgreen; font-family: 'NanumSquareNeoExtraBold'; margin-bottom: 20px;}
 .main_sns ul{display: grid;grid-template-columns: repeat(6,1fr);column-gap: 5px;}
 .main_sns ul li{width: 100%;padding-top: 100%; position: relative;}
 .main_sns ul li a img{width: 100%;height: 100%;object-fit: cover;position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);border-radius: 2px;}
@@ -136,76 +145,63 @@ footer p{color: #999;}
     .header-nav{display: none;}
     .header-mob-menu{ display: block;}
     aside{display: none;}
+
     .slide_memu li .img_box a{width: 90%;}
 }
 
 
 @media screen and (max-width:830px) {
-    .slide_memu li .text_box>strong{font-size: 16px;}
     .main_menu_prd .main_menu_new div img{width: 150px; height: 150px;}
     .main_menu_prd .main_menu_new div strong{font-size: 15px;}
     .slide_memu li .img_box{margin-top: 9px;}
     .slide_memu li .text_box{margin-top: 8px;}
-
-   /*  .main_notice{margin-top: 0;} */
+    .slide_memu li .text_box>strong{font-size: 15px;}
 }
 
 
 @media screen and (max-width:768px) {
     #header{height: 90px;}
     .header-mob-menu{height: 90px;}
+    .main_banner {padding-top: 90px;}
     .p_img{display: none !important;}
     .m_img{display: inline !important;}
-
     .main_menu_new h2,.main_menu_hot h2{font-size: 28px; }
     .slide_memu li .img_box{margin-top: -5px;}
 
-/*여기부터 수정하기*/
-    .main_notice .event_wrap{width: 100%; margin-bottom: 20px;}
-    .main_notice .event_wrap h2{margin-bottom: 5px;}
-    .main_notice .news_wrap{width: 100%; padding: 0 10px;}
-    .main_notice .news_wrap h2{margin-bottom: 5px;}
-    .main_notice .news_wrap ul li a{justify-content: flex-start;}
+    #section2 .inner{padding: 0 20px;}
+    #section3 .inner{padding: 0 20px;}
+    #section4 .inner{padding: 0 20px;}
+    .event_wrap h3, .news_wrap h3,.main_sns h3{margin-bottom: 5px;}
+    .main_notice .event_wrap{width: 100%; margin: 20px 0;}
+    .main_notice .news_wrap{width: 100%; margin-top: 20px;}
     .main_notice .news_wrap ul li a img{width: 30%; margin-right: 20px;}
     .main_notice .news_wrap ul li a strong{width: 70%;}
     .main_notice .news_wrap ul li a i{font-size: 14px;}
     .main_notice .news_wrap ul li a span{font-size: 15px;}
     .main_notice .news_wrap ul li a em{font-size: 14px;}
-
-
-    .main_menu_prd .main_menu_new div strong{font-size: 15px;}
     .slide_memu li .img_box a{width: 70%;}
-    .slide_memu li .text_box strong{font-size: 15px;}
-
 
     .main_sns ul{grid-template-columns: repeat(3,1fr); row-gap: 5px; }   
-
-
 }
+
 @media screen and (max-width:680px) {
     .main_menu_prd .main_menu_new{width:50%;}
     .main_menu_prd .main_menu_hot{width: 50%;}
     .slide_memu li .img_box a{width: 53%;}
-
-    /*정하기*/
-    .slide_memu li .text_box{margin-top: 7px;}
-    .main_menu_hot .slide_memu{padding-top: 0;}
-
-
+    .slide_memu li .text_box{margin-top: 0;}
 
     .main_sns ul{grid-template-columns: repeat(2,1fr);}
 }
 
-@media screen and (max-width:576px){
-    .main_menu_prd .main_menu_new h2{font-size: 22px;}
-    .main_menu_prd .main_menu_hot h2{font-size: 22px; }
-
-}
 @media screen and (max-width:480px){
-    .slide_memu li .img_box{margin-top: 19px;}
-    .slide_memu li .img_box a{width: 85%;}
-    .slide_memu li .text_box{margin-top: 16px;}
-    .swiper-button-next, .swiper-button-prev{display: none;}
+    .quick-menu{display: none;}
+
+    .main_menu_new h2,.main_menu_hot h2{font-size: 25px; }
+    .main_menu_prd .main_menu_new div{margin-top: 15px;}
+    .main_menu_prd .main_menu_new div img{width: 120px; height: 120px;}
+
+    .slide_memu li .img_box{margin-top: 0;}
+    .slide_memu li .img_box a{width: 70%;}
     .main_notice .news_wrap ul li a span{font-size: 14px;}
 
 }
