--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 *{font-family: 'NanumSquareNeo', 'NanumSquareNeoExtraBold';}
 
 
-
-
-.quick-menu{position: fixed; bottom: 165px; right: 15%;z-index: 999999;}
+/* quick-menu */
+.quick-menu{position: fixed; bottom: 165px; right: 15%; z-index: 99;}
 .quick-menu a{display: block; width: 107px; height: 100%; font-size: 20px; font-family: 'NanumSquareNeoExtraBold'; color: #333; text-align: center;}
 .quick-menu a img{width: 100%;}
 
@@ -26,9 +25,9 @@
 .header-mob-menu .header-appBar .appbarBt .bar3.active{top: 50%; margin-top: -1px; transform: rotate(-45deg);}
 
 .header-mob-menu .header-shop-btn{display: block;position: absolute;width: 22px;right: 20px;top: 30px;}
-.header-mob-menu .header-shop-btn a{display: block;position: absolute;width: 40px;height: 40px;right: 10px;top:10px;background-image: url(/images/ico_gnb_mobile_new_store.jpg);background-repeat: no-repeat;}
+.header-mob-menu .header-shop-btn a{display: block;position: absolute;width: 40px;height: 40px;right: 10px;top:10px;background: url(/images/ico_gnb_mobile_new_store.jpg);background-repeat: no-repeat;}
 
-aside{text-align: right;padding-top: 15px;padding-bottom: 7px;}
+aside{text-align: right; padding-top: 15px;padding-bottom: 7px;}
 aside span{display: inline-block; margin-left: 10px;}
 aside span a{color: darkgreen; font-weight: bold;}
 
@@ -38,7 +37,7 @@ aside span a{color: darkgreen; font-weight: bold;}
 .header-nav nav ul li:hover a{border-bottom: 1px solid darkgreen;}
 .header-nav nav ul li a{display: block;font-size: 20px;font-weight: bold;}
 
-.mob-bg{content: '';display: none; left: 0;top: 0;width: 100vw;height: 100vh;background: #000;position: fixed; opacity: .6;z-index: 99;}
+.mob-bg{content: '';display: none; left: 0;top: 0;width: 100vw;height: 100vh;background: #000;position: fixed; opacity: .6; z-index: 999;}
 .mob-bg.on{display: block;} 
 .mob-gnb .mob-content{display: none; width: 60%; height: 100%; background:mintcream;padding: 30px; box-sizing: border-box;  position: fixed;  top: 0; left: 0;  z-index:999;  overflow: auto;}
 .mob-gnb .mob-content.active{display: block;}
@@ -47,14 +46,15 @@ aside span a{color: darkgreen; font-weight: bold;}
 .mob-gnb .mob-content .mob-gnb-search button{width: 40px;  height: 40px; background: darkgreen; color: #fff; border-radius: 50%; cursor: pointer; position: absolute; top: 5px; right: 5px;}
 .mob-gnb .mob-content .mob-gnb-search button i{color: #fff;font-size: 14px;}
 .mob-gnb .mob-content .mob-nav ul{width: 100%;}
-.mob-gnb .mob-content .mob-nav ul li a{display: block; color: #402c10; font-size: 22px;height: 70px; line-height: 70px; font-weight: bold;}
+.mob-gnb .mob-content .mob-nav ul li a{display: block; color: #402c10; font-size: 22px;height: 55px; line-height: 55px; font-weight: bold;}
 .mob-gnb .mob-content .mob-nav ul li .mob-depth2{display: none;}
 .mob-gnb .mob-content .mob-nav ul li .mob-depth2.on{display: block;}
-.mob-gnb .mob-content .mob-nav ul li .mob-depth2 li{background: #faf9f5; height: 70px; line-height: 70px;}
-.mob-gnb .mob-content .mob-nav ul li .mob-depth2 li a{font-size: 18px; display: block; height: 70px; color: #7b6251; padding-left: 25px;}
+.mob-gnb .mob-content .mob-nav ul li .mob-depth2 li{background: #faf9f5; height: 55px; line-height: 55px;}
+.mob-gnb .mob-content .mob-nav ul li .mob-depth2 li a{font-size: 18px; display: block; height: 55px; color: #7b6251; padding-left: 25px;}
 .mob-gnb .mob-content .mob-nav .util{width: 100%; display: block; margin: 30px 0;}
-.mob-gnb .mob-content .mob-nav .util ul li{display: inline-block; padding: 0 10px; margin-bottom: 5px;}
-.mob-gnb .mob-content .mob-nav .util ul li a{font-size: 16px; color: #7b6251; font-weight: bold; }
+.mob-gnb .mob-content .mob-nav .util ul li{display: inline-block; padding: 0 5px;}
+.mob-gnb .mob-content .mob-nav .util ul li a{font-size: 15px; color: #7b6251; font-weight: bold; }
+.mob-gnb-search input::placeholder{font-size: 12px }
 
 
 /* main */
@@ -78,7 +78,6 @@ aside span a{color: darkgreen; font-weight: bold;}
 #section2{width: 100%; height: auto; padding-top: 70px;}
 #section2 .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
 .main_menu_new h2,.main_menu_hot h2{font-size: 38px; color: darkgreen; margin-bottom: 20px; font-family: 'NanumSquareNeoExtraBold';}
-
 .main_menu_prd {display: flex;flex-wrap: wrap;justify-content: space-between;}
 .main_menu_prd .main_menu_new {width: 30%; margin-bottom: 20px; background: oldlace;padding: 10px;box-sizing: border-box;}
 .main_menu_prd .main_menu_new div{width: 100%;display: inline-block; text-align: center;}
@@ -87,17 +86,21 @@ aside span a{color: darkgreen; font-weight: bold;}
 
 .main_menu_prd .main_menu_hot {width: 70%; margin-bottom: 20px; padding: 10px; box-sizing: border-box;}
 .slide_memu li .img_box{text-align: center; margin-top: 15px;}
-.slide_memu li .img_box a{border-radius: 50%;background-color: mintcream; display: inline-block;width: 100%;height: 100%;text-align: center;overflow: hidden;}
-.slide_memu li .img_box a img{width: 100%; object-fit: contain; height: 100%;  padding: 10px; box-sizing: border-box;}
+.slide_memu li .img_box a{border-radius: 50%;background-color: mintcream; display: inline-block;width: 100%;height: 100%;text-align: center;overflow: hidden; }
+.slide_memu li .img_box a img{width: 100%; object-fit: contain; height: 100%;  padding: 10px; box-sizing: border-box;} 
 .slide_memu li .text_box{width: 100%; text-align: center; margin-top: 20px;}
 .slide_memu li .text_box>strong{font-size: 17px; color: #555; }
+.img_box:hover a{transform: scale(1.3); position: relative; z-index: 1; }
 
-.owl-nav{display: none;}
+.owl-carousel{position: relative;} 
+.owl-nav button{ width:55px; height: 55px; position: absolute;  top: -75px;}
+.owl-nav button.owl-prev{background: url(../images/ico_main_prd_prev.png); background-repeat: no-repeat; right: 60px;}
+.owl-nav button.owl-next{background: url(../images/ico_main_prd_next.png); background-repeat: no-repeat;  right: 0;}
 .owl-dots{display: none;}
 
 
 /* #section3 */
-#section3{width: 100%; height: auto;  margin-top: 50px;}
+#section3{width: 100%; height: auto;  margin-top: 70px;}
 #section3 .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
 .main_notice{width: 100%; display: flex; justify-content: space-between; flex-wrap: wrap;}
 .event_wrap{width: 70%; padding: 0 5px; box-sizing: border-box;} 
@@ -115,10 +118,27 @@ aside span a{color: darkgreen; font-weight: bold;}
 .main_notice .news_wrap ul li a em{font-size: 12px; color: #9b9b9b;}
 
 
-/* #section4 */
-#section4{width: 100%; margin-top: 50px;}
+/* section4 */
+#section4{width: 100%; height: auto;  margin-top: 70px;}
 #section4 .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
+.main_store h3, .main_franchise h3{font-size: 30px; color: darkgreen; font-family: 'NanumSquareNeoExtraBold'; margin-bottom: 50px; text-align: center;}
+.main_store{display: flex;}
+.main_store>div{padding: 68px 78px; box-sizing: border-box;}
+.main_store_search{width: 50%; height: 390px; background: palegreen; background: url(../images/bg_main_sns_top.jpg) no-repeat bottom;}
+.main_store_search p{font-size: 20px;}
+.main_store_search form{position: relative;}
+.main_store_search form input{border: 3px solid darkgreen;color: darkgreen;width: 100%;line-height: 50px;height: 50px;padding-left: 10px;box-sizing: border-box; margin-top: 25px; padding-right: 45px;}
+.main_store_search form button{background: none;}
+.main_store_search form button i{display: inline-block; width: 40px; height: 40px; line-height: 40px; color: #222; background: oldlace; border-radius: 50%; position: absolute; top: 30px; right: 5px;}
+.main_franchise{width: 50%; height: 390px; background: url(../images/bg_main_snack_size.png);}
+.main_franchise a p{font-size: 20px;}
+.main_franchise a strong{display: block; text-align: center; font-size: 20px; margin-top: 25px;}
+.main_franchise a strong i{display: inline-block; width: 40px; height: 40px; line-height: 40px; color: #fff; background: #7b6251; border-radius: 50%;}
 
+
+/* #section5 */
+#section5{width: 100%; margin-top: 70px;}
+#section5 .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
 .main_sns{width: 100%; padding: 0 10px;}
 .main_sns h3{font-size: 23px; color: darkgreen; font-family: 'NanumSquareNeoExtraBold'; margin-bottom: 20px;}
 .main_sns ul{display: grid;grid-template-columns: repeat(6,1fr);column-gap: 5px;}
@@ -127,7 +147,7 @@ aside span a{color: darkgreen; font-weight: bold;}
 
 
 /* footer */
-#footer{width: 100%; clear: both;margin-top: 50px; border-top: 1px solid #ccc; padding: 20px 0 30px;}
+#footer{width: 100%; clear: both;margin-top: 70px; border-top: 1px solid #ccc; padding: 20px 0 30px;}
 #footer .inner{width: 100%;max-width: 1100px;margin: 0 auto; padding: 0 30px;box-sizing: border-box;}
 .footer-link{margin-bottom: 10px; margin-top: 10px;}
 .footer-link li{display: inline-block; margin-right: 20px;}
@@ -139,14 +159,14 @@ footer p{color: #999;}
 
 
 
-
 @media screen and (max-width:1100px) {
     #header .inner{padding: 0;}
     .header-nav{display: none;}
     .header-mob-menu{ display: block;}
     aside{display: none;}
-
+    
     .slide_memu li .img_box a{width: 90%;}
+    .main_notice .news_wrap ul li{margin-bottom: 0;}
 }
 
 
@@ -170,7 +190,7 @@ footer p{color: #999;}
 
     #section2 .inner{padding: 0 20px;}
     #section3 .inner{padding: 0 20px;}
-    #section4 .inner{padding: 0 20px;}
+    #section5 .inner{padding: 0 20px;}
     .event_wrap h3, .news_wrap h3,.main_sns h3{margin-bottom: 5px;}
     .main_notice .event_wrap{width: 100%; margin: 20px 0;}
     .main_notice .news_wrap{width: 100%; margin-top: 20px;}
@@ -180,6 +200,12 @@ footer p{color: #999;}
     .main_notice .news_wrap ul li a span{font-size: 15px;}
     .main_notice .news_wrap ul li a em{font-size: 14px;}
     .slide_memu li .img_box a{width: 70%;}
+
+    .owl-nav button{display: none;}
+
+    .main_store{flex-direction: column;}
+    .main_franchise{width: 100%;}
+    .main_store_search{width: 100%;}
 
     .main_sns ul{grid-template-columns: repeat(3,1fr); row-gap: 5px; }   
 }
